fix theme position on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -898,4 +898,8 @@ img {
     align-items: flex-start;
     gap: 0.5rem;
   }
+
+  .theme-switcher {
+    flex-basis: 100%;
+  }
 }
